get bricks of current user
